--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^7.7.0",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -41,6 +42,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
+    "vite-plugin-pwa": "^1.0.2"
     "vite-plugin-pwa": "^1.0.2",
     "workbox-window": "^7.3.0"
   }
